log/build_2025-05-23_13-12-04/car/stderr.log
  File "/home/rhobtor/PHD/ARGOJ8_IA/install/car/lib/python3.10/site-packages/car/path_ppo_cnn_lstm_training_init_mode_j8.py", line 680
    cost = (distance(cand, target)
            ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

